--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,35 @@
 asgiref==3.5.2
+certifi==2022.12.7
 cffi==1.15.1
-Django==3.2.16
+charset-normalizer==3.0.1
+contourpy==1.0.7
+cycler==0.11.0
+dj-database-url==1.2.0
+Django==4.1.1
+django-active-link==0.1.8
+django-bootstrap-icons==0.8.2
+django-multiselectfield==0.1.12
 djangorestframework==3.14.0
+fonttools==4.38.0
 gunicorn==20.1.0
+idna==3.4
+joblib==1.2.0
+kiwisolver==1.4.4
+matplotlib==3.6.3
+numpy==1.24.1
+packaging==23.0
+pandas==1.5.2
 Pillow==9.3.0
 pillow-heif==0.7.2
 pycparser==2.21
+pyparsing==3.0.9
+python-dateutil==2.8.2
 pytz==2022.6
+requests==2.28.2
+scikit-learn==1.2.0
+scipy==1.10.0
+six==1.16.0
 sqlparse==0.4.3
+threadpoolctl==3.1.0
+urllib3==1.26.14
 whitenoise==6.2.0
-
-dj-config-url~=0.1.1
