--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-active-link==0.1.8
 django-bootstrap-icons==0.8.2
 django-filter==22.1
 djangorestframework==3.14.0
+dj-database-url==1.2.0
 gunicorn==20.1.0
 joblib==1.2.0
 Pillow==9.3.0
