--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,7 @@
-asgiref==3.5.2
-certifi==2022.12.7
-cffi==1.15.1
-cloudinary==1.32.0
-Django==3.2.16
-django-active-link==0.1.8
-django-bootstrap-icons==0.8.2
-django-filter==22.1
-djangorestframework==3.14.0
-dj-database-url==1.2.0
-gunicorn==20.1.0
-joblib==1.2.0
-Pillow==9.3.0
-pillow-heif==0.7.2
-pycparser==2.21
-pytz==2022.6
-pyzbar==0.1.9
-sqlparse==0.4.3
-threadpoolctl==3.1.0
-urllib3==1.26.14
-whitenoise==6.2.0
-
-reportlab~=4.0.4
-dj-config-url~=0.1.1
-
+Django~=3.2.16
+djangorestframework~=3.14.0
+cloudinary~=1.32.0
 pymongo~=4.6.1
+reportlab~=4.0.4
+django-filter~=22.1
+dj-config-url~=0.1.1
