render.yaml Update

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
 - type: web
-  name: TateoMerch
+  name: ShipTeo
   env: python
   plan: starter
   buildCommand: ./build.sh
@@ -11,7 +11,7 @@ services:
       value: 4
     - key: DATABASE_URL
       fromDatabase:
-        name: TateoMerch
+        name: ShipTeo
         property: connectionString
     - key: DJANGO_SECRET_KEY
       generateValue: true
@@ -21,6 +21,6 @@ services:
       value: config.settings.production
 
 databases:
-- name: TateoMerch
+- name: ShipTeo
   databaseName: django
   user: django
