--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pymongo~=4.6.1
 reportlab~=4.0.4
 django-filter~=22.1
 djongo~=1.3.6
-
+pandas~=2.2.1
 asgiref==3.5.2
 certifi==2022.12.7
 cffi==1.15.1
@@ -28,3 +28,4 @@ urllib3==1.26.14
 whitenoise==6.2.0
 reportlab~=4.0.4
 dj-config-url~=0.1.1
+plotly~=5.19.0
