--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ pandas~=2.2.1
 asgiref==3.5.2
 certifi==2022.12.7
 cffi==1.15.1
-
+pymongo==3.12.0
 django-active-link==0.1.8
 django-bootstrap-icons==0.8.2
 django-filter==22.1
@@ -30,3 +30,6 @@ reportlab~=4.0.4
 dj-config-url~=0.1.1
 plotly~=5.19.0
 beautifulsoup4~=4.12.3
+celery~=5.3.6
+qrcode~=7.4.2
+python-dotenv~=1.0.1
