--- a/requirements.txt
+++ b/requirements.txt
@@ -29,5 +29,6 @@ dj-config-url~=0.1.1
 plotly~=5.19.0
 beautifulsoup4~=4.12.3
 celery~=5.3.6
+django-celery-beat
 qrcode~=7.4.2
 python-dotenv~=1.0.1
